[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "active_alchemy"
authors = [
    {name = "Curiouspaul", email = "paulcurious7@gmail.com"},
]
version = "0.1.0"
dependencies = [
    "SQLAlchemy",
    "PyMySQL",
    "pg8000",
    "Paginator",
    "inflection",
    "arrow",
    "flask",
    "sqlalchemy-utils"
]
description = "A framework agnostic wrapper for SQLAlchemy with a simple active record like api"
classifiers = [
    # Project Maturity
    'Development Status :: 3 - Alpha',

    # Indicate who your project is intended for
    'Intended Audience :: Developers',
    'Topic :: Software Development :: Build Tools',

    "Operating System :: OS Independent",

    # License
    'License :: OSI Approved :: MIT License',

    # Python versions Support
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
requires-python = '>=3'

[tool.setuptools.packages.find]
include = ["active_alchemy*"]
